--- a/ethnode/webui/network.html
+++ b/ethnode/webui/network.html
@@ -384,7 +384,8 @@
 	</div>
 	<!--  -->
 	<!-- open maps -->
-	<script src="//openlayers.org/en/v3.2.1/build/ol.js" type="text/javascript"></script>
+	<script src="//openlayers.org/en/v4.6.4/build/ol.js" type="text/javascript"></script>
+	<!-- <script src="//openlayers.org/en/v3.2.1/build/ol.js" type="text/javascript"></script> -->
 	<!-- Vendor JS -->
 	<script src="dist/js/vendor.min.js"></script>
 	<!-- Main JS file-->
