--- a/ethnode/webui/src/network.html
+++ b/ethnode/webui/src/network.html
@@ -38,7 +38,8 @@
 	//= templates/redesigned-big-gig-modal.html
 	<!--  -->
 	<!-- open maps -->
-	<script src="//openlayers.org/en/v3.2.1/build/ol.js" type="text/javascript"></script>
+	<script src="//openlayers.org/en/v4.6.4/build/ol.js" type="text/javascript"></script>
+	<!-- <script src="//openlayers.org/en/v3.2.1/build/ol.js" type="text/javascript"></script> -->
 	<!-- Vendor JS -->
 	<script src="dist/js/vendor.min.js"></script>
 	<!-- Main JS file-->
