--- a/ethnode/webui/src/network.html
+++ b/ethnode/webui/src/network.html
@@ -15,7 +15,9 @@
 	<div class="network-page-wrap-module">
 		<a href="" data-toggle="modal" data-target="#modal-network" class="hidden"></a>
 		<section class="network-map">
-			<div id="map" tabindex="0" style="height: 100vh; width: 100%;"></div>
+			<div id="map" tabindex="0" style="height: 100vh; width: 100%;">
+				<div id="tooltip" class="tooltip"></div>
+			</div>
 		</section>
 	</div>
 	<div class="modal fade" id="modal-network">
@@ -27,9 +29,14 @@
 						<p class="ntw-ip"></p>
 					</div>
 				</div>
-				<button data-dismiss="modal" class="btn btn-primary btn-block no-mrg no-border pdd-vertical-15 ng-scope">
-					<span class="text-uppercase">Close</span>
-				</button>
+				<div class="flex">
+					<button data-dismiss="modal" class="btn btn-primary btn-half no-mrg no-border pdd-vertical-15 ng-scope">
+						<span class="text-uppercase">Close</span>
+					</button>
+					<button id="networkSelect" class="btn btn-primary btn-half no-mrg no-border pdd-vertical-15 ng-scope">
+						<span class="text-uppercase">Select</span>
+					</button>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -39,7 +46,6 @@
 	<!--  -->
 	<!-- open maps -->
 	<script src="//openlayers.org/en/v4.6.4/build/ol.js" type="text/javascript"></script>
-	<!-- <script src="//openlayers.org/en/v3.2.1/build/ol.js" type="text/javascript"></script> -->
 	<!-- Vendor JS -->
 	<script src="dist/js/vendor.min.js"></script>
 	<!-- Main JS file-->
