--- a/ethnode/webui/src/network.html
+++ b/ethnode/webui/src/network.html
@@ -15,21 +15,28 @@
 	<div class="network-page-wrap-module">
 		<a href="" data-toggle="modal" data-target="#modal-network" class="hidden"></a>
 		<section class="network-map">
-			<div id="map" tabindex="0" style="height: 100vh; width: 100%;"></div>
+			<div id="map" tabindex="0" style="height: 100vh; width: 100%; padding-top: 65px;">
+				<div id="tooltip" class="tooltip"></div>
+			</div>
 		</section>
 	</div>
 	<div class="modal fade" id="modal-network">
 		<div class="modal-dialog modal-sm" role="document">
-			<div class="modal-content about-head-modal">
+			<div class="modal-content cdn-details">
 				<div class="modal-body">
 					<div class="text-center">
 						<h3 class="ntw-country"></h3>
 						<p class="ntw-ip"></p>
 					</div>
 				</div>
-				<button data-dismiss="modal" class="btn btn-primary btn-block no-mrg no-border pdd-vertical-15 ng-scope">
-					<span class="text-uppercase">Close</span>
-				</button>
+				<div class="flex">
+					<button data-dismiss="modal" class="btn btn-pink btn-half no-mrg no-border pdd-vertical-15 ng-scope">
+						<span class="text-uppercase">Close</span>
+					</button>
+					<button id="networkSelect" class="btn btn-primary btn-half no-mrg no-border pdd-vertical-15 ng-scope">
+						<span class="text-uppercase">Select</span>
+					</button>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -37,11 +44,9 @@
 	//= templates/add-gig-modal.html
 	//= templates/redesigned-big-gig-modal.html
 	<!--  -->
+	<!-- open maps -->
+	<script src="//openlayers.org/en/v4.6.4/build/ol.js" type="text/javascript"></script>
 	<!-- Vendor JS -->
-	<!-- google api key: AIzaSyDlyDTrWOPUQbfgEuyDguhTLN82aIyuUmU -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlyDTrWOPUQbfgEuyDguhTLN82aIyuUmU"></script>
-	<!-- open layer -->
-	<!-- <script src="https://openlayers.org/en/v4.6.4/build/ol.js" type="text/javascript"></script> -->
 	<script src="dist/js/vendor.min.js"></script>
 	<!-- Main JS file-->
 	<script src="js/main.js"></script>
