--- a/ethnode/webui/network.html
+++ b/ethnode/webui/network.html
@@ -105,6 +105,7 @@
 					<div class="text-center">
 						<h3 class="ntw-country"></h3>
 						<p class="ntw-ip"></p>
+						<input type="hidden" id="service_url">
 					</div>
 				</div>
 				<div class="flex">
